correção no grafico de lucros

--- a/paginaFilme.html
+++ b/paginaFilme.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./ASSETS/CSS/style.css">
     <link rel="stylesheet" href="./ASSETS/CSS/paginaFilme.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>MOVIE LOG</title>
 </head>
 <body>
@@ -121,40 +122,9 @@
         </div>
         <div class="informacoes-adicionais">
             <h1 class="titulo-informacoes-adicionais">Informações adicionais</h1>
-            <!-- <div class="informacoes-adicionais-container">
-                <div class="info-filme-card">
-                    <div>
-                        <h3 class="info-filme-card-titulo">Titulo original</h3>
-                        <p class="info-filme-card-p">The Beekeeper</p>
-                    </div>
-                    <div>
-                        <h3 class="info-filme-card-titulo">Situação</h3>
-                        <p class="info-filme-card-p">Lançado</p>
-                    </div>
-                    <div>
-                        <h3 class="info-filme-card-titulo">Idioma original</h3>
-                        <p class="info-filme-card-p">Inglês</p>
-                    </div>
-                </div>
-                <div class="info-filme-card">
-                    <div>
-                        <h3 class="info-filme-card-titulo">Orçamento</h3>
-                        <p class="info-filme-card-p">$35,000,000.00</p>
-                    </div>
-                    <div>
-                        <h3 class="info-filme-card-titulo">Receita</h3>
-                        <p class="info-filme-card-p">$122,926,919.00</p>
-                    </div>
-                    <div>
-                        <h3 class="info-filme-card-titulo">Lucro</h3>
-                        <p class="info-filme-card-p">$87,926,919</p>
-                        <p class="porcentagem-lucro"><i class="fa-solid fa-caret-up"></i>200%</p>
-                    </div>                
-                </div>
-                <div>
+                <!-- <div>
                     <canvas id="graficoLucro" width="200"></canvas>
-                </div>
-            </div> -->
+                </div> -->
         </div>
         <div class="filmes-recomendados">
             <h1>Recomendações baseadas nesse filme</h1>
@@ -165,7 +135,7 @@
     </main>
     <script src="./App/sidebar.js" type="module"></script>
     <script src="./App/barraPesquisa.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="./App/paginaFilme.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
