--- a/filmeCateg.html
+++ b/filmeCateg.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./ASSETS/CSS/style.css">
+    <link rel="stylesheet" href="./ASSETS/CSS/filmeCateg.css">
     <title>MOVIE LOG</title>
 </head>
 <body>
@@ -83,9 +84,17 @@
             </ul>
         </div>
     </aside>
+    <h1 class="titulo-popular"></h1>
+    <section class="carrousel">
+        
+    </section>
 
+    <div class="container-botao">
+        <button class="botao-carregar-mais">Carregar mais<i class="fa-solid fa-angle-down"></i></button>
+    </div>
 
     <script src="./App/sidebar.js" type="module"></script>
     <script src="./App/barraPesquisa.js" type="module"></script>
+    <script type="module" src="./App/filmeCateg.js"></script>
 </body>
 </html>
