botao filme curtido e assistir mais tarde adicionam  filmes na localStorage

--- a/filmeCateg.html
+++ b/filmeCateg.html
@@ -50,7 +50,7 @@
                         <span>Suas listas</span></a>                
                 </li>
                 <li class="menu__itens-principais">
-                    <a href="#">
+                    <a href="listaFilmes.html">
                         <i class="fa-solid fa-heart"></i>
                         <span>Filmes curtidos</span></a>                
                 </li>
