--- a/listaFilmes.html
+++ b/listaFilmes.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./ASSETS/CSS/style.css">
-    <link rel="stylesheet" href="./ASSETS/CSS/paginaFilme.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>MOVIE LOG</title>
 </head>
 <body>
@@ -85,58 +83,9 @@
             </ul>
         </div>
     </aside>
-    <main>
-        <div class="infoFilme__container">
-            <!-- <div class="infoFilmes__conteudo">
-                <img class="infoFilme__poster-img" src="ASSETS/IMG/imagemPoster.jpg" alt="">
-                <div class="infos-pricipal-filme">
-                    <h1 id="filme-titulo">Beekeeper - Rede de Vingança</h1>
-                    <h2 id="filme-tagline">Exponha a corrupção, proteja a colmeia.</h2>
-                    <div class="infoFilme__container-botoes">
-                        <button class="infoFilme__botoes"><i class="fa-solid fa-heart"></i></button>
-                        <button class="infoFilme__botoes"><i class="fa-solid fa-bookmark"></i></button>
-                        <button class="infoFilme__botoes"><i class="fa-solid fa-list"></i></button>
-                        <button id="assister-trailer-botao">Assista o trailer <i class="fa-solid fa-play"></i></button>
-                    </div>
-                    <p class="infoFilme__data-genero-duracao">10/01/2024 <i class="fa-solid fa-circle"></i> Ação, Thriller, Drama <i class="fa-solid fa-circle"></i> 1h45m</p>
-                </div>
-            </div> -->
-        </div>
-        <div class="Sinopse__container">
-            <!-- <div>
-                <h1>Sinopse</h1>
-                <p>Clay está em busca de vingança e não vai parar até acabar com o sistema criminoso responsável pela morte de sua amiga. O plano brutal de Clay, um ex-agente de uma organização secreta poderosa conhecida como “Beekeepers”, ganha dimensões nacionais envolvendo governos e as instituições mais influentes do mundo. Determinado a fazer justiça com suas próprias mãos, ele está disposto a tudo e não vai poupar ninguém para concluir seu plano.</p>
-            </div> -->
-        </div>
-        <h1 id="titulo_card_elenco">Elenco</h1>
-        <div class="elenco__container">
-            <div class="elenco__card-container">
-                <!-- <div class="elenco__card">
-                    <img src="./ASSETS/IMG/ator.png" alt="">
-                    <div class="elenco__card-info-ator">
-                        <h5>Jason statham</h5>
-                        <p>Adam clay</p>
-                    </div>
-                </div> -->
-            </div>
-        </div>
-        <div class="informacoes-adicionais">
-            <h1 class="titulo-informacoes-adicionais">Informações adicionais</h1>
-                <!-- <div>
-                    <canvas id="graficoLucro" width="200"></canvas>
-                </div> -->
-        </div>
-        <div class="filmes-recomendados">
-            <h1>Recomendações baseadas nesse filme</h1>
-            <div class="filmes-recomendados__card-container">
 
-            </div>
-        </div>
-    </main>
+
     <script src="./App/sidebar.js" type="module"></script>
+    <script src="./App/mostraFilmes.js" type="module"></script>
     <script src="./App/barraPesquisa.js" type="module"></script>
-    <script type="module" src="./App/paginaFilme.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="./App/adicionarFilmesLista.js" defer></script>
 </body>
-</html>
