--- a/listaFilmes.html
+++ b/listaFilmes.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./ASSETS/CSS/style.css">
+    <link rel="stylesheet" href="./ASSETS/CSS/listaFilmes.css">
     <title>MOVIE LOG</title>
 </head>
 <body>
@@ -84,8 +85,22 @@
         </div>
     </aside>
 
+    <main class="lista-filmes">
+        <section class="lista-filmes__container">
+            <div class="lista-filmes__painel-botoes">
+                <div id="botao-filmes-curtidos" class="painel-botoes"><h3><i class="fa-solid fa-heart"></i> Filmes curtidos</h3></div>
+                <div id="botao-filmes-lista" class="painel-botoes"><h3><i class="fa-solid fa-list"></i> Filmes na sua lista</h3></div>
+            </div>
+            <div class="lista-filmes__painel-filmes">
+                <div class="painel-filmes__container-filmes">
+                    <!--conteudo feito com js-->
+                </div>
+            </div>
+        </section>
+    </main>
+
 
     <script src="./App/sidebar.js" type="module"></script>
-    <script src="./App/mostraFilmes.js" type="module"></script>
+    <script type="module" src="./App/listaFilmes.js"></script>
     <script src="./App/barraPesquisa.js" type="module"></script>
 </body>
