Habilitada a opcao de assistir trailers

--- a/paginaFilme.html
+++ b/paginaFilme.html
@@ -102,6 +102,9 @@
                 </div>
             </div> -->
         </div>
+        <div class="container-trailer">
+
+        </div>
         <div class="Sinopse__container">
             <!-- <div>
                 <h1>Sinopse</h1>
@@ -138,5 +141,6 @@
     <script type="module" src="./App/paginaFilme.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="./App/adicionarFilmesLista.js" defer></script>
+    
 </body>
 </html>
