--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <span class="cabecalho__menu-botao" data-expandir-menu><i class="fa-solid fa-bars menu__botao"></i></span>
             <h1 class="cabecalho__titulo"><a href="index.html">MovieLOG</a></h1>
         </div>
-        <div class="cabecalho__pesquisar">
 
+
+
+        <div class="cabecalho__pesquisar">
             <input type="search" placeholder="Pesquisar filme" id="pesquisar" class="pesquisar__input">
             <button class="pesquisar__botao"><i class="fa-solid fa-magnifying-glass"></i></button>
             <div class="pesquisar__container-resultado">
@@ -24,13 +26,20 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-botao-pesquisa">
+            <span id="botao-pesquisa-mobile"><i class="fa-solid fa-magnifying-glass"></i></span>
+        </div>
+
         <div class="input-toggle-dark">
+            
             <input type="checkbox" id="darkModeToggle">
             <label for="darkModeToggle" class="switch">
                 <span class="slider"></span>
             </label>
         </div>
     </header>
+
     <aside class="menu">
         <div class="menu__titulo-botao">
             <span class="cabecalho__menu-botao" data-contrair-menu><i class="fa-solid fa-bars menu__botao"></i></span>
@@ -39,14 +48,14 @@
         <div class="menu__opcoes-menu">
             <ul class="menu__itens-container">
                 <li class="menu__itens-principais">
-                    <a href="#">
+                    <a href="index.html">
                         <i class="fa-solid fa-house"></i>
                         <span>Início</span></a>
                 </li>
                 <li class="menu__itens-principais">
                     <a href="#">
                         <i class="fa-solid fa-list"></i>
-                        <span>Suas listas</span></a>                
+                        <span>Sua lista</span></a>                
                 </li>
                 <li class="menu__itens-principais">
                     <a href="listaFilmes.html">
